--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 Back In Time
 
 Version 1.4.4-dev (development of upcoming release)
+* Fix: Fix Qt segmentation fault with uninstall ExtraMouseButtonEventFilter when closing main window (#1095)
 * Build: Enable PyLint rules C0305 (trailing-newlines), C0324 (superfluous-parens), C0410 (multiple-imports), E0213 (no-self-argument)
 * Feature: Warn if Cron is not running (#1747)
 * Build: Activate PyLint error C0303 (trailing-whitespaces)
