Add a CHANGELOG entry.

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 Back In Time
 
+* Fix: Sort rsync include/exclude options according to specificity (#561, #1420)
+
 Version 1.5.3-dev (development of upcoming release)
 * Doc: User manual (build with MkDocs) (#1838)
 * Feature: Support language Interlingua (Occidental)
